# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
-use App\Http\Controllers\Api\V1\AuthController;
+use App\Http\Controllers\Api\V1\AuthApiController;
+use App\Http\Controllers\Api\V1\UserApiController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -20,6 +21,10 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 });
 
 Route::prefix('/v1')->namespace('Api\V1')->group(function () {
-    Route::post('send_sms',[AuthController::class, 'sendSms']);
+    Route::post('send_sms',[AuthApiController::class, 'sendSms']);
+    Route::post('verify_sms_code',[AuthApiController::class, 'verifySms']);
 });
 
+Route::prefix('/v1')->namespace('Api\V1')->middleware('auth:sanctum')->group(function () {
+    Route::post('register',[UserApiController::class, 'register']);
+});
